@@ -1,5 +1,11 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o The NSE http library now supports chunked encoding. [Sven Klemm]
+
+o Fix a number of NSE scripts which used print_debug()
+  incorrectly. See
+  http://seclists.org/nmap-dev/2008/q3/0470.html. [Sven Klemm].
+
 o Improve the nebtios-smb-os-discovery NSE script to improve target
   port selection and to also decode the system's timestamp from an SMB
   response. [Ron at SkullSecurity]
